--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://root:root@foodsDB/app?schema=public"
+
+JWT_SECRET=89boNtB6S0GuO1ZGQujz8YPuB
